api-courtcases/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: courtcases-api
  namespace: xconnected
spec:
  replicas: 1
  selector:
    matchLabels:
      app: courtcases-api
  template:
    metadata:
      labels:
        app: courtcases-api
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: courtcases-api
        image: xconnected/components:courtcases-api-3.0
        imagePullPolicy: Always
        ports:
          - containerPort: 8004
        volumeMounts:
          - mountPath: "/media"
            name: media-volume
      volumes:
        - name: media-volume
          persistentVolumeClaim:
            claimName: courtcases-api-pvc
