api-courtcases/service.yml
apiVersion: v1
kind: Service
metadata:
  name: courtcases-api
  namespace: xconnected
spec:
  selector:
    app: courtcases-api
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
